--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="particles-js"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -36,5 +37,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="/static/js/particles/particles.min.js"></script>
+    <script src="/static/js/particles/snow.js"></script>
   </body>
 </html>
